Fix: align image texts horizontally inside div

--- a/homepage.css
+++ b/homepage.css
@@ -167,6 +167,7 @@ h1 {
     display: flex;
     gap: 33px;
     margin-top: 40px;
+    justify-content: space-around;
 }
 
 
